--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">TaskApp35</string>
+    <string name="enter_id">Введите id</string>
+    <string name="enter_name">Введите название</string>
+    <string name="save">Save</string>
 </resources>
